--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "new-project",
   "private": true,
+  "homepage": "https://aravindhan472002.github.io/Kannan-Digital",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
