--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
-    "gh-pages": "^6.3.0",
     "mongodb": "^4.17.2",
     "mongoose": "^8.9.3",
     "multer": "^1.4.5-lts.1",
@@ -32,6 +31,7 @@
     "react-carousel": "^4.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^7.1.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1"
@@ -49,6 +49,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "gh-pages": "^6.3.0",
     "globals": "^15.13.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
